syntax = "proto3";

package memos.api.v2;

import "google/api/annotations.proto";

option go_package = "gen/api/v2";

service WorkspaceService {
  // GetWorkspaceProfile returns the workspace profile.
  rpc GetWorkspaceProfile(GetWorkspaceProfileRequest) returns (GetWorkspaceProfileResponse) {
    option (google.api.http) = {get: "/api/v2/workspace/profile"};
  }
}

message WorkspaceProfile {
  // The name of intance owner.
  // Format: "users/{id}"
  string owner = 1;
  // version is the current version of instance
  string version = 2;
  // mode is the instance mode (e.g. "prod", "dev" or "demo").
  string mode = 3;
  // disallow_signup is whether the signup is disallowed.
  bool disallow_signup = 4;
  // disable_password_login is whether the password login is disabled.
  bool disable_password_login = 5;
  // additional_script is the additional script.
  string additional_script = 6;
  // additional_style is the additional style.
  string additional_style = 7;
}

message GetWorkspaceProfileRequest {}

message GetWorkspaceProfileResponse {
  WorkspaceProfile workspace_profile = 1;
}
